--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #FFC0CB ; /* Change the background color to pink */
+      background-color: #FFFFFF ; /* Change the background color to pink */
       color: black ; /* Default text color */
     }
   <title> • Mahakaleshwar Shivling Art</title>
@@ -89,7 +89,7 @@
   <h3>Welcome to Mahakaleshwar Shivling Art</h3>
   <h4>ग्राम बकावां की एक मात्र शॉप जहां पर माँ नर्मदा के तल से प्राप्त सभी प्रकार की आकृतियों के ऑरिजनल युनीक(unique) नर्मदेश्वर शिवलिंग मिलते है| यहा पर आपको सभी कलर ओर साइज़ के नर्मदेश्वर शिवलिंग उचित मूल्य पर मिल जायेगे| घर पर ऑनलाइन शिवलीग प्राप्त करने के लिए हमे कॉल या मैसेज कर सकते है |
 </h4> 
-<a href="tel:+918103490112"><button>Call Now</button></a>
+<a href="tel:+919754935273"><button>Call Now</button></a>
   <!-- Additional content can be added here -->
 <div class="about-us-section">
     <h3></h3>
@@ -138,7 +138,7 @@
 <body>
 
 <!-- Replace "8103490112" with the desired WhatsApp number -->
-<a href="https://api.whatsapp.com/send?phone=918103490112" target="_blank">
+<a href="https://api.whatsapp.com/send?phone=919754935273" target="_blank">
   <button>Buy Now</button>
 </a>
 
@@ -187,14 +187,14 @@
 <body>
 
 <!-- Replace "8103490112" with the desired WhatsApp number -->
-<a href="https://api.whatsapp.com/send?phone=918103490112" target="_blank">
+<a href="https://api.whatsapp.com/send?phone=919754935273" target="_blank">
   <button>Buy Now</button>
 </a>
 
 </body>
 
     </p>
-    <a href="tel:+918103490112"><button>Call Now</button></a>
+    <a href="tel:+919754935273"><button>Call Now</button></a>
     <!-- Add more content as needed -->
     <h4>नर्मदेश्वर शिवलिंग प्राप्त करने के लिए फ़ोन कॉल करे या व्हाट्सअप से मेसेज करे और शिवलिंग की फोटो देखे फिर आर्डर करे | (To get Narmadeshwar Shivling, make a phone call or message on WhatsApp and see the photo of Shivling, then place the order.)</h4>
  
@@ -220,7 +220,7 @@
 
 <div class="center">
   <!-- Replace "8103490112" with the desired WhatsApp number -->
-  <a href="https://api.whatsapp.com/send?phone=918103490112" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=919754935273" target="_blank">
     <button>Buy Now</button>
   </a>
 </div>
@@ -242,7 +242,7 @@
 
 <h2> </h2>
 
-    <a href="tel:+918103490112"><button>Call Now</button></a>
+    <a href="tel:+919754935273"><button>Call Now</button></a>
     <h2> </h2>
   
 
@@ -279,7 +279,7 @@
 
 <div class="center">
   <!-- Replace "8103490112" with the desired WhatsApp number -->
-  <a href="https://api.whatsapp.com/send?phone=918103490112" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=919754935273" target="_blank">
     <button>Buy Now</button>
   </a>
 </div>
@@ -308,7 +308,7 @@
 
 <div class="center">
   <!-- Replace "8103490112" with the desired WhatsApp number -->
-  <a href="https://api.whatsapp.com/send?phone=918103490112" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=919754935273" target="_blank">
     <button>Buy Now</button>
   </a>
 </div>
@@ -335,7 +335,7 @@
 
 <div class="center">
   <!-- Replace "8103490112" with the desired WhatsApp number -->
-  <a href="https://api.whatsapp.com/send?phone=918103490112" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=919754935273" target="_blank">
     <button>Buy Now</button>
   </a>
 </div>
@@ -362,7 +362,7 @@
 
 <div class="center">
   <!-- Replace "8103490112" with the desired WhatsApp number -->
-  <a href="https://api.whatsapp.com/send?phone=918103490112" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=919754935273" target="_blank">
     <button>Buy Now</button>
   </a>
 </div>
@@ -389,7 +389,7 @@
 
 <div class="center">
   <!-- Replace "8103490112" with the desired WhatsApp number -->
-  <a href="https://api.whatsapp.com/send?phone=918103490112" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=919754935273" target="_blank">
     <button>Buy Now</button>
   </a>
 </div>
@@ -416,7 +416,7 @@
 
 <div class="center">
   <!-- Replace "8103490112" with the desired WhatsApp number -->
-  <a href="https://api.whatsapp.com/send?phone=918103490112" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=919754935273" target="_blank">
     <button>Buy Now</button>
   </a>
 </div>
@@ -444,7 +444,7 @@
 
 <div class="center">
   <!-- Replace "8103490112" with the desired WhatsApp number -->
-  <a href="https://api.whatsapp.com/send?phone=918103490112" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=919754935273" target="_blank">
     <button>Buy Now</button>
   </a>
 </div>
@@ -471,7 +471,7 @@
 
 <div class="center">
   <!-- Replace "8103490112" with the desired WhatsApp number -->
-  <a href="https://api.whatsapp.com/send?phone=918103490112" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=919754935273" target="_blank">
     <button>Buy Now</button>
   </a>
 </div>
@@ -498,7 +498,7 @@
 
 <div class="center">
   <!-- Replace "8103490112" with the desired WhatsApp number -->
-  <a href="https://api.whatsapp.com/send?phone=918103490112" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=919754935273" target="_blank">
     <button>Buy Now</button>
   </a>
 </div>
@@ -517,7 +517,7 @@
 </html>
 
 
-     <a href="tel:+918103490112"><button>view more products</button></a>
+     <a href="tel:+919754935273"><button>view more products</button></a>
    <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -796,8 +796,8 @@
 </div>
 
 <div class="options" id="options">
-  <a href="tel:8103490112">Call</a>
- <a href="https://wa.me/918103490112?text=Hello i want to buy shivalingum " target="_blank"> & WhatsApp</a>
+  <a href="tel:9754935273">Call</a>
+ <a href="https://wa.me/919754935273?text=Hello i want to buy shivalingum " target="_blank"> & WhatsApp</a>
 </div>
 
 <script>
